fix colon color contrast

--- a/apps/experimental/document-generator-v2/document_generator_v2_app/static/css/styles.css
+++ b/apps/experimental/document-generator-v2/document_generator_v2_app/static/css/styles.css
@@ -364,6 +364,12 @@ textarea, input, span, h1, p, .text {
     color: #27272a !important;
 }
 
+.cm-line {
+    background-color: #ffffff !important;
+    border: 1px solid #ffffff !important;
+    color: #27272a !important;
+}
+
 /* Resources */
 .resources-col {
     width: 190px !important;
